--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <!-- 2. Glassmorphism tags -->
     <div class="tags">
-      <span class="tag">#Anzhelika Liashenko 🧑‍💻</span>
-      <span class="tag">#UI/UX-Graphic Designer 🖥️</span>
+      <span class="tag"><span>#Anzhelika Liashenko</span> <span>🧑‍💻</span></span>
+      <span class="tag"><span>#UI/UX-Graphic Designer</span> <span>🖥️</span></span>
     </div>
 
     <!-- 3. Hero block: text + profile photo -->
