--- a/about.html
+++ b/about.html
@@ -11,14 +11,33 @@
   <link rel="stylesheet" href="about.css">
 </head>
 <body>
+  <header class="global-header">
+    <div class="header-container">
+      <a href="index.html" class="header-home-link" title="Home">
+         🏠
+      </a>
+      <div class="header-socials">
+         <a href="#" target="_blank" class="social-link behance" title="Behance">
+          <svg viewBox="0 0 24 24" class="social-icon"><path d="M22 7h-5v2h5V7zm1-5H1C.4 2 0 2.4 0 3v18c0 .6.4 1 1 1h22c.6 0 1-.4 1-1V3c0-.6-.4-1-1-1zm-1 18h-6v-2.5c0-1.4-1.1-2.5-2.5-2.5h-1.6V12h1.6c1.4 0 2.5-1.1 2.5-2.5V7H9v13H5V5h6.6c2.4 0 4.4 2 4.4 4.4 0 1.6-.9 3-2.2 3.8 1.3.8 2.2 2.2 2.2 3.8v3h6v-2h-6v2z" fill="currentColor"/></svg>
+        </a>
+        <a href="#" target="_blank" class="social-link linkedin" title="LinkedIn">
+          <svg viewBox="10 10 28 28" class="social-icon"><path d="M20.9716667,33.5527338 L25.001,33.5527338 L25.001,27.1328007 C25.001,25.439485 25.3213333,23.7988354 27.4206667,23.7988354 C29.491,23.7988354 29.517,25.7351486 29.517,27.2404662 L29.517,33.5527338 L33.5506667,33.5527338 L33.5506667,26.4341413 C33.5506667,22.9381777 32.796,20.2505391 28.711,20.2505391 C26.7483333,20.2505391 25.432,21.3265278 24.8943333,22.3471839 L24.839,22.3471839 L24.839,20.5725357 L20.9716667,20.5725357 L20.9716667,33.5527338 Z M16.423,14.1202696 C15.1273333,14.1202696 14.0823333,15.1682587 14.0823333,16.4595785 C14.0823333,17.7508984 15.1273333,18.7992208 16.423,18.7992208 C17.7133333,18.7992208 18.761,17.7508984 18.761,16.4595785 C18.761,15.1682587 17.7133333,14.1202696 16.423,14.1202696 L16.423,14.1202696 Z M14.4026667,33.5527338 L18.4406667,33.5527338 L18.4406667,20.5725357 L14.4026667,20.5725357 L14.4026667,33.5527338 Z" fill="currentColor"/></svg>
+        </a>
+        <a href="#" target="_blank" class="social-link github" title="GitHub">
+          <svg viewBox="0 0 24 24" class="social-icon"><path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2z" fill="currentColor"/></svg>
+        </a>
+        <a href="#" target="_blank" class="social-link telegram" title="Telegram">
+          <svg viewBox="2 0 24 24" class="social-icon"><path d="M9.78 18.65l.28-4.28 7.27-6.36c.32-.28-.06-.43-.5-.18L8.15 12.73l-4.16-1.3c-.9-.28-.91-.89.18-1.31l16.28-6.16c.75-.33 1.4.18 1.16 1.35l-2.76 12.73c-.2.95-.74 1.17-1.5.73l-4.15-2.98-2 1.88c-.22.21-.4.39-.81.39l.3-3.98z" fill="currentColor"/></svg>
+        </a>
+        <a href="#" target="_blank" class="social-link gmail" title="Gmail">
+          <svg viewBox="-3 -3 30 30" class="social-icon"><path d="M24 5.457v13.909c0 .904-.732 1.636-1.636 1.636h-3.819V11.73L12 16.64l-6.545-4.91v9.273H1.636A1.636 1.636 0 0 1 0 19.366V5.457c0-2.023 2.309-3.178 3.927-1.964L5.455 4.64 12 9.548l6.545-4.91 1.528-1.145C21.69 2.28 24 3.434 24 5.457z" fill="currentColor"/></svg>
+        </a>
+      </div>
+    </div>
+  </header>
   <div class="layout-wrapper">
     <!-- Sidebar -->
     <aside class="sidebar">
-      <div class="sidebar-top">
-        <a href="index.html" class="back-link" data-tooltip="Back to Home">
-           🏠
-        </a>
-      </div>
       
       <nav class="sidebar-nav">
         <div class="nav-indicator"></div>
@@ -28,14 +47,11 @@
         <a href="skills.html" class="sidebar-item" data-tooltip="Tools & Skills">
           <span class="icon-box">🛠️</span>
         </a>
-        <a href="index.html#why" class="sidebar-item" data-tooltip="Why Choose Me">
-          <span class="icon-box">🙋</span>
-        </a>
-        <a href="index.html#cases" class="sidebar-item" data-tooltip="Cases">
+        <a href="cases.html" class="sidebar-item" data-tooltip="Cases">
           <span class="icon-box">💼</span>
         </a>
-        <a href="index.html#collab" class="sidebar-item" data-tooltip="Collaboration Process">
-          <span class="icon-box">📄</span>
+        <a href="faq.html" class="sidebar-item" data-tooltip="FAQ">
+          <span class="icon-box">❓</span>
         </a>
       </nav>
     </aside>
