--- a/index.html
+++ b/index.html
@@ -45,26 +45,19 @@
         </div>
         <span class="nav-button-text">Tools & Skills</span>
       </a>
-      <a href="#why" class="nav-button">
-        <div class="tooltip">An overview of my working principles and what sets my approach apart.</div>
-        <div class="nav-button-icon-wrapper">
-          <span class="nav-button-icon">🎯</span>
-        </div>
-        <span class="nav-button-text">Why Choose Me</span>
-      </a>
-      <a href="#cases" class="nav-button">
+      <a href="cases.html" class="nav-button">
         <div class="tooltip">Selected projects showcasing my design approach, problem-solving, and final outcomes.</div>
         <div class="nav-button-icon-wrapper">
           <span class="nav-button-icon">💼</span>
         </div>
         <span class="nav-button-text">Cases</span>
       </a>
-      <a href="#collab" class="nav-button">
-        <div class="tooltip">Aligning goals, scope, and success criteria to ensure clear communication and predictable project outcomes.</div>
+      <a href="faq.html" class="nav-button">
+        <div class="tooltip">Frequently asked questions about my work process, terms, and conditions.</div>
         <div class="nav-button-icon-wrapper">
-          <span class="nav-button-icon">🤝</span>
+          <span class="nav-button-icon">❓</span>
         </div>
-        <span class="nav-button-text">Collaboration Process</span>
+        <span class="nav-button-text">FAQ</span>
       </a>
     </nav>
 
