--- a/cases.html
+++ b/cases.html
@@ -12,6 +12,45 @@
   <link rel="stylesheet" href="cases.css">
 </head>
 <body>
+  <!-- Mobile Header -->
+  <header class="mobile-header">
+    <div class="mobile-logo">Portfolio</div>
+    <button class="burger-btn" aria-label="Toggle menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+  </header>
+
+  <!-- Mobile Nav Overlay -->
+  <div class="mobile-nav-overlay">
+    <nav class="mobile-nav-links">
+      <a href="index.html" class="mobile-nav-link"><span>🏠</span> Home</a>
+      <a href="about.html" class="mobile-nav-link"><span>🙋‍♀️</span> About Me</a>
+      <a href="skills.html" class="mobile-nav-link"><span>🛠️</span> Tools & Skills</a>
+      <a href="cases.html" class="mobile-nav-link"><span>💼</span> Cases</a>
+      <a href="faq.html" class="mobile-nav-link"><span>❓</span> FAQ</a>
+    </nav>
+    
+    <div class="mobile-social-icons">
+      <a href="https://www.behance.net/anjelikali508d" target="_blank" class="mobile-social-link">
+        <img src="src/Photo/Logos/behance.svg" alt="Behance">
+      </a>
+      <a href="https://www.linkedin.com/in/anjelikaliashenko/" target="_blank" class="mobile-social-link">
+        <img src="src/Photo/Logos/Linkedin.svg" alt="LinkedIn">
+      </a>
+      <a href="https://github.com/Likalsnk" target="_blank" class="mobile-social-link">
+        <img src="src/Photo/Logos/github.svg" alt="GitHub">
+      </a>
+      <a href="https://t.me/likalsnk" target="_blank" class="mobile-social-link">
+        <img src="src/Photo/Logos/telegram.svg" alt="Telegram">
+      </a>
+      <a href="mailto:anjelika.liashenko@gmail.com" target="_blank" class="mobile-social-link">
+        <img src="src/Photo/Logos/Gmail.svg" alt="Gmail">
+      </a>
+    </div>
+  </div>
+
   <div class="layout-wrapper">
     <!-- Sidebar -->
     <aside class="sidebar">
@@ -336,13 +375,14 @@
           <div class="card-content">
             <div class="card-header">
               <h4 class="card-title">RefillArena</h4>
-              <span class="year-badge">2025</span>
+              <span class="year-badge">2023</span>
             </div>
-            <p class="card-desc">B2B</p>
+            <p class="card-desc">B2B • Gift Cards</p>
              <div class="tech-stack">
               <span class="tech-tag">Figma</span>
-              <span class="tech-tag">Branding</span>
               <span class="tech-tag">Visual Identity</span>
+              <span class="tech-tag">AI</span>
+              <span class="tech-tag">Released</span>
             </div>
           </div>
         </a>
@@ -360,7 +400,7 @@
           <div class="card-content">
             <div class="card-header">
               <h4 class="card-title">Next Project</h4>
-              <span class="year-badge">2024</span>
+              <span class="year-badge">Future</span>
             </div>
             <p class="card-desc">In Progress</p>
              <div class="tech-stack">
