--- a/index.html
+++ b/index.html
@@ -10,7 +10,46 @@
   <link href="https://fonts.googleapis.com/css2?family=Briem+Hand:wght@200;400;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home-page">
+  <!-- Mobile Header -->
+  <header class="mobile-header">
+    <div class="mobile-logo">Portfolio</div>
+    <button class="burger-btn" aria-label="Toggle menu">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+  </header>
+
+  <!-- Mobile Nav Overlay -->
+  <div class="mobile-nav-overlay">
+    <nav class="mobile-nav-links">
+      <a href="index.html" class="mobile-nav-link"><span>🏠</span> Home</a>
+      <a href="about.html" class="mobile-nav-link"><span>🙋‍♀️</span> About Me</a>
+      <a href="skills.html" class="mobile-nav-link"><span>🛠️</span> Tools & Skills</a>
+      <a href="cases.html" class="mobile-nav-link"><span>💼</span> Cases</a>
+      <a href="faq.html" class="mobile-nav-link"><span>❓</span> FAQ</a>
+    </nav>
+    
+    <div class="mobile-social-icons">
+      <a href="https://www.behance.net/anjelikali508d" target="_blank" class="mobile-social-link">
+        <img src="src/Photo/Logos/behance.svg" alt="Behance">
+      </a>
+      <a href="https://www.linkedin.com/in/anjelikaliashenko/" target="_blank" class="mobile-social-link">
+        <img src="src/Photo/Logos/Linkedin.svg" alt="LinkedIn">
+      </a>
+      <a href="https://github.com/Likalsnk" target="_blank" class="mobile-social-link">
+        <img src="src/Photo/Logos/github.svg" alt="GitHub">
+      </a>
+      <a href="https://t.me/likalsnk" target="_blank" class="mobile-social-link">
+        <img src="src/Photo/Logos/telegram.svg" alt="Telegram">
+      </a>
+      <a href="mailto:anjelika.liashenko@gmail.com" target="_blank" class="mobile-social-link">
+        <img src="src/Photo/Logos/Gmail.svg" alt="Gmail">
+      </a>
+    </div>
+  </div>
+
   <main class="wrapper">
     <!-- 1. Title -->
     <h1 class="page-title">Portfolio</h1>
