fix(spa): prevent directory traversal from breaking SPA routing
Also update project titles and replace whale animation with professional admin UI for MeddMax case card.

--- a/cases.html
+++ b/cases.html
@@ -118,7 +118,7 @@
 
       <div class="cases-grid">
         <!-- Project 1: Hub -->
-        <a href="cases/hub/index.html" class="case-card">
+        <a href="cases/sunrise/index.html" class="case-card">
           <div class="card-image-wrapper" data-tilt>
             <img src="src/Photo/Icons/Emojis/Сases/default.jpg" alt="Hub Project" loading="lazy" width="400" height="300">
             
@@ -213,7 +213,7 @@
         </a>
 
         <!-- Project 3: Languages -->
-        <a href="cases/languages/index.html" class="case-card">
+        <a href="cases/hub/index.html" class="case-card">
           <div class="card-image-wrapper" data-tilt>
             <img src="src/Photo/Icons/Emojis/Сases/hover.jpg" alt="Languages Project" loading="lazy" width="400" height="300">
             <!-- Hearts Animation -->
@@ -247,22 +247,62 @@
         <a href="cases/meddmax/index.html" class="case-card" data-tilt>
           <div class="card-image-wrapper">
             <img src="src/Photo/Icons/Emojis/Сases/LH.jpg" alt="MeddMax Project" loading="lazy" width="400" height="300">
-            <!-- Whale Animation -->
-            <div class="whale-wrapper">
-              <div class="whale-pixels">
-                <div class="pixel p1"></div>
-                <div class="pixel p2"></div>
-                <div class="pixel p3"></div>
-                <div class="pixel p4"></div>
-                <div class="pixel p5"></div>
-                <div class="pixel p6"></div>
-                <div class="pixel p7"></div>
-                <div class="pixel p8"></div>
+            <!-- Admin Panel Animation -->
+            <div class="admin-panel-wrapper">
+              <div class="admin-ui-container">
+                <div class="admin-sidebar">
+                  <div class="admin-sidebar-logo"></div>
+                  <div class="admin-sidebar-item active"></div>
+                  <div class="admin-sidebar-item"></div>
+                  <div class="admin-sidebar-item"></div>
+                  <div class="admin-sidebar-item"></div>
+                </div>
+                <div class="admin-content">
+                  <div class="admin-top-bar">
+                    <div class="search-fake"></div>
+                    <div class="profile-group">
+                      <div class="notif-dot"></div>
+                      <div class="profile-fake"></div>
+                    </div>
+                  </div>
+                  <div class="dashboard-grid">
+                    <div class="d-row-stats">
+                      <div class="stat-card"></div>
+                      <div class="stat-card"></div>
+                      <div class="stat-card"></div>
+                    </div>
+                    <div class="chart-card">
+                      <div class="chart-header-fake"></div>
+                      <div class="chart-area-modern">
+                        <div class="m-bar b1"></div>
+                        <div class="m-bar b2"></div>
+                        <div class="m-bar b3"></div>
+                        <div class="m-bar b4"></div>
+                        <div class="m-bar b5"></div>
+                        <div class="m-bar b6"></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Floating Professional Elements -->
+                <div class="float-ui-card user-stat">
+                  <div class="ui-icon-circle">👤</div>
+                  <div class="ui-text-group">
+                    <span class="ui-label">New Users</span>
+                    <span class="ui-value">+1,240</span>
+                  </div>
+                </div>
+                <div class="float-ui-card growth-stat">
+                  <div class="ui-icon-circle green">📈</div>
+                  <div class="ui-text-group">
+                    <span class="ui-label">Growth</span>
+                    <span class="ui-value">+24.5%</span>
+                  </div>
+                </div>
               </div>
-              <img src="src/Photo/Icons/Emojis/Illustration box.svg" class="floating-whale" alt="Floating Whale">
             </div>
             <div class="card-overlay">
-              <span class="view-project">View Case Study</span>
+              <span class="view-project">View Dashboard</span>
             </div>
           </div>
           <div class="card-content">
@@ -281,7 +321,7 @@
         </a>
 
         <!-- Project 5: Sunrise -->
-        <a href="cases/sunrise/index.html" class="case-card" data-tilt>
+        <a href="cases/other/index.html" class="case-card" data-tilt>
           <div class="card-image-wrapper zero-gravity-wrapper">
             <!-- Background Title -->
             <div class="bg-title">RefillArena</div>
