feat: add dark mode support and chat widget
- Implement theme toggle with light/dark CSS custom properties
- Add chat widget with Telegram bot integration for visitor messages
- Refactor inline styles into reusable CSS classes for case pages
- Update UI components to use theme-aware variables for colors and borders
- Add dark mode image variant for homepage hero

--- a/cases.html
+++ b/cases.html
@@ -118,8 +118,8 @@
 
       <div class="cases-grid">
         <!-- Project 1: Hub -->
-        <a href="cases/sunrise/index.html" class="case-card">
-          <div class="card-image-wrapper" data-tilt>
+        <a href="cases/sunrise/index.html" class="case-card" data-tilt>
+          <div class="card-image-wrapper">
             <img src="src/Photo/Icons/Emojis/Сases/default.jpg" alt="Hub Project" loading="lazy" width="400" height="300">
             
             <!-- Running Text Animation -->
@@ -179,8 +179,8 @@
         </a>
 
         <!-- Project 2: RealFace -->
-        <a href="cases/itreal/index.html" class="case-card">
-          <div class="card-image-wrapper" data-tilt>
+        <a href="cases/itreal/index.html" class="case-card" data-tilt>
+          <div class="card-image-wrapper">
             <img src="src/Photo/Icons/Emojis/Сases/RF.jpg" alt="RealFace Project" loading="lazy" width="400" height="300">
             <!-- RealFace Animation Overlay -->
             <div class="realface-anim-wrapper">
@@ -213,8 +213,8 @@
         </a>
 
         <!-- Project 3: Languages -->
-        <a href="cases/hub/index.html" class="case-card">
-          <div class="card-image-wrapper" data-tilt>
+        <a href="cases/hub/index.html" class="case-card" data-tilt>
+          <div class="card-image-wrapper">
             <img src="src/Photo/Icons/Emojis/Сases/hover.jpg" alt="Languages Project" loading="lazy" width="400" height="300">
             <!-- Hearts Animation -->
             <div class="hearts-wrapper">
@@ -302,7 +302,7 @@
               </div>
             </div>
             <div class="card-overlay">
-              <span class="view-project">View Dashboard</span>
+              <span class="view-project">View Case Study</span>
             </div>
           </div>
           <div class="card-content">
