--- a/cases/sunrise/index.html
+++ b/cases/sunrise/index.html
@@ -28,11 +28,11 @@
     <main class="main-content">
       <div class="header-card">
         <div class="header-left">
-          <a href="../../cases.html" style="text-decoration: none; color: #52525B; font-size: 14px; margin-bottom: 8px; display: inline-block;">← Back to Cases</a>
+          <a href="../../cases.html" class="back-to-cases">← Back to Cases</a>
           <h1>Sunrise</h1>
         </div>
       </div>
-      <div class="project-details" style="background: white; padding: 32px; border-radius: 24px; border: 1px solid #E4E4E7;">
+      <div class="project-details-card">
         <p>Details for Sunrise project will be here.</p>
       </div>
     </main>
