--- a/skills.html
+++ b/skills.html
@@ -460,7 +460,7 @@
           <div class="accordion-body">
             <div class="tools-list">
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">⚡</div>
+                <div class="tool-icon-placeholder">⚡</div>
                 <div class="tool-info">
                   <h4>Vibe Coding & AI-accelerated prototyping</h4>
                   <p>I describe the desired feeling and logic of an interface in natural language → rapidly generate clickable prototypes and iteratively refine them until the “vibe” is perfect. This approach lets me validate concepts in hours or days instead of weeks, keeping the focus on user experience rather than manual busywork.</p>
@@ -468,7 +468,7 @@
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">🧩</div>
+                <div class="tool-icon-placeholder">🧩</div>
                 <div class="tool-info">
                   <h4>Design Systems & Component-driven design</h4>
                   <p>I build and evolve production-ready design systems: tokens, variables, complex components with states, modes, and built-in accessibility. These systems scale across multiple products / brands, drastically reduce design-dev handoff issues, and speed up both design and development cycles.</p>
@@ -476,21 +476,21 @@
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">🔍</div>
+                <div class="tool-icon-placeholder">🔍</div>
                 <div class="tool-info">
                   <h4>User Research & Deep user understanding</h4>
                   <p>I conduct interviews, map user flows, create journey maps and information architecture. I turn qualitative insights and behavioral data into clear, actionable product decisions.</p>
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">📐</div>
+                <div class="tool-icon-placeholder">📐</div>
                 <div class="tool-info">
                   <h4>Wireframing, Prototyping & Interaction Design</h4>
                   <p>From low-fidelity sketches and user flows to high-fidelity interactive prototypes with logic, micro-interactions, and motion that clearly communicate behavior.</p>
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">🧪</div>
+                <div class="tool-icon-placeholder">🧪</div>
                 <div class="tool-info">
                   <h4>Usability Testing & Validation</h4>
                   <p>I run moderated and unmoderated tests, analyze user behavior, and iteratively improve solutions based on real feedback.</p>
@@ -498,35 +498,35 @@
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">🎨</div>
+                <div class="tool-icon-placeholder">🎨</div>
                 <div class="tool-info">
                   <h4>Visual & UI Design</h4>
                   <p>Clean typography, emotionally resonant color systems, custom iconography & illustration, layouts that perform beautifully on any screen.</p>
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">📱</div>
+                <div class="tool-icon-placeholder">📱</div>
                 <div class="tool-info">
                   <h4>Responsive & Adaptive Design</h4>
                   <p>Mobile-first approach + full adaptation for tablets, desktops, different pixel densities, and modes (light / dark / high-contrast).</p>
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">♿</div>
+                <div class="tool-icon-placeholder">♿</div>
                 <div class="tool-info">
                   <h4>Accessibility & Inclusive Design</h4>
                   <p>WCAG 2.2 / 2.3 AA+ compliance built in from the first layout: contrast, semantics, keyboard navigation, screen-reader support — tested at every stage.</p>
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">✨</div>
+                <div class="tool-icon-placeholder">✨</div>
                 <div class="tool-info">
                   <h4>Microinteractions & Motion Design</h4>
                   <p>Animations and transitions that guide attention, explain logic, and strengthen emotional connection — never just decoration.</p>
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">🖼️</div>
+                <div class="tool-icon-placeholder">🖼️</div>
                 <div class="tool-info">
                   <h4>High-fidelity Mockups</h4>
                   <p>Detailed, pixel-perfect mockups ready for development handoff, user testing, or stakeholder presentations.</p>
@@ -545,7 +545,7 @@
           <div class="accordion-body">
             <div class="tools-list">
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">🎓</div>
+                <div class="tool-icon-placeholder">🎓</div>
                 <div class="tool-info">
                   <h4>Mentoring & Teaching on courses</h4>
                   <p>I mentor and teach on online UX/UI and product design courses (groups + 1:1). I work with students from beginner to junior+ level — helping them build strong case studies, portfolios, design systems, master vibe coding and systemic thinking. I run group sessions, individual reviews, project feedback — and regularly see students move on to land their first freelance clients or full-time product roles.</p>
@@ -553,28 +553,28 @@
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">🌐</div>
+                <div class="tool-icon-placeholder">🌐</div>
                 <div class="tool-info">
                   <h4>Systems Thinking</h4>
                   <p>I see products as ecosystems, not collections of screens. I help (and teach others to) correctly frame problems, set priorities, and design solutions that scale.</p>
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">🎯</div>
+                <div class="tool-icon-placeholder">🎯</div>
                 <div class="tool-info">
                   <h4>Strategic Problem Framing</h4>
                   <p>I start with “what vibe should this product have and why does it matter to users and business?” — not with “how do I draw this screen?”</p>
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">❤️</div>
+                <div class="tool-icon-placeholder">❤️</div>
                 <div class="tool-info">
                   <h4>Empathy + Business Orientation</h4>
                   <p>I deeply understand users while keeping business metrics in focus (conversion, retention, satisfaction). I can explain this connection clearly — both to students on courses and to cross-functional teams.</p>
                 </div>
               </div>
               <div class="tool-item">
-                <div class="tool-icon-placeholder" style="background: #E4E4E7; display: flex; align-items: center; justify-content: center; font-size: 32px;">🚀</div>
+                <div class="tool-icon-placeholder">🚀</div>
                 <div class="tool-info">
                   <h4>Fast iteration & Experimental mindset</h4>
                   <p>I prefer to test ideas on live prototypes as early as possible — vibe coding is my primary accelerator. I pass this mindset to students so they avoid getting stuck in perfectionism.</p>
