--- a/cases/meddmax/index.html
+++ b/cases/meddmax/index.html
@@ -32,7 +32,7 @@
           <h1>MeddMax</h1>
         </div>
       </div>
-      <div class="project-details" style="background: white; padding: 32px; border-radius: 24px; border: 1px solid #E4E4E7;">
+      <div class="project-details-card">
         <p>Details for MeddMax project will be here.</p>
       </div>
     </main>
